tests/error/void_pointer_arithmetic.vbc
int main() {
    int a = 1;
    void* p = &a;
    p++;
    return 0;
}
